--- a/frontend/src/components/hex/hex.module.css
+++ b/frontend/src/components/hex/hex.module.css
@@ -2,18 +2,16 @@
   position: relative;
   width: 136px;
   height: 136px;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  bottom: 0px;
+  content: "\2B22";
 
   background: linear-gradient(155.89deg, #FFCC21 8.26%, #FF963C 91.18%);
   /* transform: rotate(-90deg); */
 }
 
-/* .container::before {
+/* .container::after {
   content: "\2B22";
-  font-size: 135px;
+  font-size: 136px;
+  color: linear-gradient(155.89deg, #FFCC21 8.26%, #FF963C 91.18%);
 } */
 
 .text {
@@ -41,4 +39,3 @@
   left: calc(50% - 56px/2);
   top: calc(50% - 56px/2 - 12px);
 }
-
